--- a/MonPremierSite/Views/Carabistouille/Blog.cshtml
+++ b/MonPremierSite/Views/Carabistouille/Blog.cshtml
@@ -14,17 +14,17 @@
             @Html.DisplayNameFor(model => model.Id)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
+            @Model.Id
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.User)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User)
+            @Model.User
         </dd>
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new {/* id = Model.PrimaryKey */}) |
     <a asp-action="Index">Back to List</a>
 </div>
