--- a/MonPremierSite/Views/Carabistouille/Index.cshtml
+++ b/MonPremierSite/Views/Carabistouille/Index.cshtml
@@ -1,9 +1,9 @@
-﻿@*
+﻿@model MonPremierSite.DBModels.User
+
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
 
-<input />
-
-Machin eee
+Nom: @Model.Name Age: @Model.Age
